nullaway_error_AEAB3F99-15D3-422D-B705-712528CCD76A.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-web/src/main/java/org/springframework/http/codec/multipart/MultipartParser.java:126: error: [NullAway] dereferenced expression this.state.get() is @Nullable
		this.state.get().onComplete();
		                ^
    (see http://t.uber.com/nullaway )
